k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: <ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/techchallenge/test-app:latest
        ports:
        - containerPort: 80
